kubernetes/4.3.1_gateway_api_envoy_gateway/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - image: docker.io/library/nginx:stable-alpine-slim
          name: my-container
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
