kubernetes/4.3.1_gateway_api_envoy_gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
