kubernetes/4.3.1_gateway_api_envoy_gateway/http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-route
spec:
  parentRefs:
    - name: my-gateway
  rules:
    - backendRefs:
        - name: my-service
          port: 80
      # matches:
      #   - path:
      #       type: PathPrefix
      #       value: /
